--- a/RationShop/AdminApp/templates/Order_Details.html
+++ b/RationShop/AdminApp/templates/Order_Details.html
@@ -48,6 +48,9 @@
                                 <th class="border-bottom-0">
                                     <h6 class="fw-semibold mb-0">Created At</h6>
                                 </th>
+                                <th class="border-bottom-0">
+                                    <h6 class="fw-semibold mb-0">Shop ID</h6>
+                                </th>
 
                                 <th class="border-bottom-0">
                                     <h6 class="fw-semibold mb-0">Actions</h6>
@@ -89,6 +92,12 @@
                                  <td class="border-bottom-0">
                                     <div class="d-flex align-items-center gap-2">
                                         <h6 class="fw-semibold mb-0 fs-4">{{i.created_at}}</h6>
+
+                                    </div>
+                                </td>
+                                <td class="border-bottom-0">
+                                    <div class="d-flex align-items-center gap-2">
+                                        <h6 class="fw-semibold mb-0 fs-4">{{i.Shop}}</h6>
 
                                     </div>
                                 </td>
