--- a/RationShop/WebApp/templates/CheckOut.html
+++ b/RationShop/WebApp/templates/CheckOut.html
@@ -14,6 +14,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="{% static 'web/assets/css/bootstrap.min.css' %}">
     <!-- style css -->
@@ -174,6 +176,9 @@
                                         <button class="dropdown-item">
                                             <a href="{% url 'MyDetails' shp.id %}">My Details</a>
                                         </button>
+                                        <button class="dropdown-item">
+                                            <a href="{% url 'PartnerDetails'%}">View Partner Details</a>
+                                        </button>
                                         {% else %}
                                         <p style="text-align: center;">Details not available</p>
                                         {% endif %}
@@ -243,7 +248,7 @@
                     <div class="mb-3">
                         <label for="fullName" class="form-label">Full Name</label>
                         <input type="text" name="name" class="form-control" id="fullName"
-                               placeholder="Enter Your Full Name" value="" required>
+                               placeholder="Enter Your Full Name" required>
                     </div>
 
                     <div class="mb-3">
@@ -261,14 +266,14 @@
                     <div class="mb-3">
                         <label for="cardNumber" class="form-label">Ration Card Number</label>
                         <input type="text" class="form-control" id="cardNumber" name="cardnum"
-                               placeholder="Egs : 12341234123"
+                               value="{{details.Ration_Card}}"
                                required>
                     </div>
                     {% elif request.session.Reg_Num %}
                     <div class="mb-3">
                         <label for="cardNumber" class="form-label">Shop Registration Number</label>
                         <input type="text" class="form-control" id="regNumber" name="regnum"
-                               placeholder="Egs : 12341234123"
+                               value="{{shp.Reg_Num}}"
                                required>
                     </div>
                     {% endif %}
@@ -278,46 +283,24 @@
                                max="10"
                                required>
                     </div>
-
-
-                </div>
-                {% if request.session.Ration_Card %}
-                <div class="col-md-5" style="margin-top:50px;padding-left:100px;text-align:left;">
-                    <h1 class="mb-4">Payment Options</h1>
-                    <div class="form-check mb-3" style="font-size:25px;">
-                        <input class="form-check-input" type="radio" name="payment_option" value="cod" id="codOption">
-                        <label class="form-check-label" for="codOption">
-                            Cash On Delivery
-                        </label>
+                    {% if request.session.Ration_Card %}
+                    <div class="mb-3">
+                        <label for="payment_method" class="form-label">Select Payment Method:</label>
+                        <select name="payment_method" class="form-control" id="payment_method" required>
+                            <option value="COD">Cash on Delivery (COD)</option>
+                            <option value="Online">Online Payment</option>
+                        </select>
                     </div>
-                    <div class="form-check mb-3" style="font-size:25px;">
-                        <input class="form-check-input" type="radio" name="payment_option" value="card"
-                               id="onlineOption">
-                        <label class="form-check-label" for="onlineOption">
-                            Card Payment
-                        </label>
+                    <div class="mb-3">
+                        <input type="hidden" name="amount" id="amount" step="0.01" value="{{total_price}}" required>
                     </div>
-                    <div class="form-check mb-3" style="font-size:25px;">
-                        <input class="form-check-input" type="radio" name="payment_option" value="upi"
-                               id="onineOption">
-                        <label class="form-check-label" for="onlineOption">
-                            UPI Payment
-                        </label>
-                    </div>
-                    <div class="form-check mb-3" style="font-size:25px;">
-                        <input class="form-check-input" type="radio" name="payment_option" value="online"
-                               id="onlineOpton">
-                        <label class="form-check-label" for="onlineOption">
-                            Online Banking
-                        </label>
-                    </div>
+                    {% elif request.session.Reg_Num %}
+                    <div></div>
+                    {% else %}
+                    <div></div>
+                    {% endif %}
                 </div>
 
-                {% elif request.session.Reg_Num %}
-                <div></div>
-                {% else %}
-                <div></div>
-                {% endif %}
                 <button type="submit" class="btn btn-primary place-order-btn mt-3">Place Order</button>
             </form>
         </div>
@@ -325,9 +308,6 @@
 
     </div>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
 
 
 <footer id="contact" class="bd-footer py-4 py-md-5 mt-5">
@@ -352,17 +332,40 @@
                 </div>
                 <div class="col-6 col-lg-2 offset-lg-1 mb-4">
                     <h4 style="color:white;" class="mb-4 border-bottom">Important Links</h4>
+                    {% if request.session.Reg_Num %}
+                    <ul class="mb-4">
+                        <li class="mb-2"><a href="{% url 'ShopHome' %}" style="color:white;">Home</a></li>
+                        <li class="mb-2"><a style="color:white;" href="{% url 'ShopStock' %}">Products</a></li>
+                        <li class="mb-2"><a style="color:white;" href="{% url 'About' %}">About Us</a></li>
+                        <li class="mb-2"><a style="color:white;" href="{% url 'ContactUs' %}">Contact Us</a>
+                        </li>
+                        <li class="mb-2"><a style="color:white;" href="{% url 'CartPage' %}">Cart</a></li>
+                        <li class="mb-2"><a style="color:white;" href="{% url 'OrderPage' %}">Your Orders</a>
+                        </li>
+
+                    </ul>
+                    {% elif request.session.Ration_Card %}
                     <ul class="mb-4">
                         <li class="mb-2"><a href="{% url 'Home' %}" style="color:white;">Home</a></li>
                         <li class="mb-2"><a style="color:white;" href="{% url 'Products' %}">Products</a></li>
                         <li class="mb-2"><a style="color:white;" href="{% url 'About' %}">About Us</a></li>
                         <li class="mb-2"><a style="color:white;" href="{% url 'ContactUs' %}">Contact Us</a>
                         </li>
-                        <li class="mb-2"><a style="color:white;" href="https://themes.getbootstrap.com/">Cart</a></li>
-                        <li class="mb-2"><a style="color:white;" href="https://blog.getbootstrap.com/">Your Orders</a>
+                        <li class="mb-2"><a style="color:white;" href="{% url 'CartPage' %}">Cart</a></li>
+                        <li class="mb-2"><a style="color:white;" href="{% url 'OrderPage' %}">Your Orders</a>
                         </li>
 
                     </ul>
+                    {% elif request.session.delivery_partner %}
+                    <ul class="mb-4">
+                        <li class="mb-2"><a href="{% url 'Delivery_Partner' %}" style="color:white;">Home</a></li>
+
+                        <li class="mb-2"><a style="color:white;" href="{% url 'About' %}">About Us</a></li>
+                        <li class="mb-2"><a style="color:white;" href="{% url 'ContactUs' %}">Contact Us</a>
+                    </ul>
+                    {% else %}
+                    <ul></ul>
+                    {% endif %}
                 </div>
                 <div class="col-6 col-lg-2 mb-3">
                     <h4 style="color:white;" class="border-bottom mb-4">For Admins</h4>
@@ -370,44 +373,9 @@
                         <li class="mb-2"><a style="color:white;" href="{% url 'AdminLoginPage' %}">Go To Admin
                             DashBoard</a></li>
 
-                        <li class="mb-2"><a href="/docs/5.3/examples/starter-template/">Starter template</a>
-                        </li>
-                        <li class="mb-2"><a href="/docs/5.3/getting-started/webpack/">Webpack</a></li>
-                        <li class="mb-2"><a href="/docs/5.3/getting-started/parcel/">Parcel</a></li>
-                        <li class="mb-2"><a href="/docs/5.3/getting-started/vite/">Vite</a></li>
                     </ul>
                 </div>
-                <div class="col-6 col-lg-2 mb-3">
-                    <h5>Projects</h5>
-                    <ul class="list-unstyled">
-                        <li class="mb-2"><a href="https://github.com/twbs/bootstrap" target="_blank"
-                                            rel="noopener">Bootstrap 5</a></li>
-                        <li class="mb-2"><a href="https://github.com/twbs/bootstrap/tree/v4-dev" target="_blank"
-                                            rel="noopener">Bootstrap 4</a></li>
-                        <li class="mb-2"><a href="https://github.com/twbs/icons" target="_blank"
-                                            rel="noopener">Icons</a>
-                        </li>
-                        <li class="mb-2"><a href="https://github.com/twbs/rfs" target="_blank" rel="noopener">RFS</a>
-                        </li>
-                        <li class="mb-2"><a href="https://github.com/twbs/examples/" target="_blank"
-                                            rel="noopener">Examples repo</a></li>
-                    </ul>
-                </div>
-                <div class="col-6 col-lg-2 mb-3">
-                    <h5>Community</h5>
-                    <ul class="list-unstyled">
-                        <li class="mb-2"><a href="https://github.com/twbs/bootstrap/issues" target="_blank"
-                                            rel="noopener">Issues</a></li>
-                        <li class="mb-2"><a href="https://github.com/twbs/bootstrap/discussions" target="_blank"
-                                            rel="noopener">Discussions</a></li>
-                        <li class="mb-2"><a href="https://github.com/sponsors/twbs" target="_blank"
-                                            rel="noopener">Corporate sponsors</a></li>
-                        <li class="mb-2"><a href="https://opencollective.com/bootstrap" target="_blank"
-                                            rel="noopener">Open Collective</a></li>
-                        <li class="mb-2"><a href="https://stackoverflow.com/questions/tagged/bootstrap-5"
-                                            target="_blank" rel="noopener">Stack Overflow</a></li>
-                    </ul>
-                </div>
+
             </div>
 
         </div>
@@ -426,7 +394,9 @@
 </footer>
 
 <!-- end footer -->
+
 <!-- Javascript files-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="{% static 'web/assets/js/jquery.min.js' %}"></script>
 <script src="{% static 'web/assets/js/popper.min.js' %}"></script>
 <script src="{% static 'web/assets/js/bootstrap.bundle.min.js' %}"></script>
@@ -440,5 +410,18 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
+{% if messages %}
+<script>
+    {% for message in messages %}
+        Swal.fire({
+            title: '{{ message.tags|title }}',
+            text: '{{ message }}',
+            icon: '{{ message.tags }}',
+            confirmButtonText: 'OK'
+        });
+    {% endfor %}
+</script>
+{% endif %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
