--- a/RationShop/WebApp/templates/MyDetails.html
+++ b/RationShop/WebApp/templates/MyDetails.html
@@ -55,120 +55,18 @@
     </style>
 </head>
 <body class="main-layout inner_page">
-<header>
-    <!-- header inner -->
-    <div class="header">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
-                    <div class="full">
-                        <div class="center-desk">
-                            <div class="logo">
-                                <a href="{% url 'Home' %}"><img src="{% static 'web/assets/images/Rationlogo.png' %}"
-                                                                style="width:300px;height:100px;"
-                                                                alt="#"/></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-9 col-lg-10 col-md-12 col-sm-9">
-                    <nav class="navigation navbar navbar-expand-md navbar-dark ">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                                data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false"
-                                aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarsExample04">
-                            <ul class="navbar-nav mr-auto">
-                                <li class="nav-item">
-                                    {% if request.session.Ration_Card %}
-                                    <a class="nav-link" href="{% url 'Home' %}"> Home </a>
-                                    {% elif request.session.Reg_Num %}
-                                    <a class="nav-link" href="{% url 'ShopHome' %}"> Home </a>
-                                    {% endif %}
-                                </li>
-                                {% if request.session.Reg_Num %}
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'Requests' %}"> Orders </a>
-                                </li>
-                                {% endif %}
-                                <li class="nav-item ">
-                                    {% if request.session.Ration_Card %}
-                                    <a class="nav-link" href="{% url 'Products' %}"> Ration </a>
-                                    {% elif request.session.Reg_Num %}
-                                    <a class="nav-link" href="{% url 'ShopStock' %}"> Stock </a>
-                                    {% endif %}
-                                </li>
 
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'CartPage' %}" style="position:relative;">Cart
-                                        <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1"
-                                              style="top: -12px; left: 55px; height: 20px; min-width: 20px;">{{ x }}</span></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'OrderPage' %}">Request</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'About' %}">About</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'ContactUs' %}">Contact Us</a>
-                                </li>
-
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" role="button"
-                                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <i class="bi bi-person-circle" style="font-size: 2rem;"></i>
-                                    </a>
-                                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                                        {% if request.session.Ration_Card %}
-                                        <h2 style="text-align:center;">Hi, {{ request.session.Ration_Card }}</h2>
-                                        <hr style="border: 2px solid black; margin: 20px 0;">
-                                        {% if details and details.id %}
-                                        <button class="dropdown-item">
-                                            <a href="{% url 'MyDetails' details.id %}">My Details</a>
-                                        </button>
-                                        {% else %}
-                                        <p style="text-align: center;">Details not available</p>
-                                        {% endif %}
-                                        <hr style="border: 2px solid black; margin: 20px 0;">
-                                        <a class="dropdown-item" href="{% url 'LogOut' %}">Logout</a>
-
-                                        {% elif request.session.Reg_Num %}
-                                        <h2 style="text-align:center;">Hi, {{ request.session.Reg_Num }}</h2>
-                                        <hr style="border: 2px solid black; margin: 20px 0;">
-                                        {% if shp and shp.id %}
-                                        <button class="dropdown-item">
-                                            <a href="{% url 'MyDetails' shp.id %}">My Details</a>
-                                        </button>
-                                        <button class="dropdown-item">
-                                            <a href="{% url 'PartnerDetails'%}">View Partner Details</a>
-                                        </button>
-                                        {% else %}
-                                        <p style="text-align: center;">Details not available</p>
-                                        {% endif %}
-                                        <hr style="border: 2px solid black; margin: 20px 0;">
-                                        <a class="dropdown-item" href="{% url 'LogOut' %}">Logout</a>
-
-                                        {% else %}
-                                        <a class="dropdown-item" href="{% url 'LoginPage' %}">Login</a>
-                                        {% endif %}
-                                    </div>
-                                </li>
-
-
-                            </ul>
-                        </div>
-                    </nav>
-                </div>
-            </div>
-        </div>
-    </div>
-</header>
-
+{% if request.session.Ration_Card %}
+<div style="margin-top:50px;">
+    <a href="{% url 'Home' %}">
+        <button class="btn btn-success ml-5">
+            Back to Home
+        </button>
+    </a>
+</div>
 <div class="container py-5">
     <h1 class="text-center mb-4">Personal Information</h1>
-    {% if request.session.Ration_Card %}
+
 
     <div class="card p-4 mb-4">
         <div class="d-flex align-items-center">
@@ -259,7 +157,18 @@
         <!-- Employee ID -->
 
     </div>
+
+
     {% elif request.session.Reg_Num %}
+    <div style="margin-top:50px;">
+        <a href="{% url 'ShopHome' %}">
+            <button class="btn btn-success ml-5" >
+                Back to Home
+            </button>
+        </a>
+    </div>
+    <div class="container py-5">
+        <h1 class="text-center mb-4">Personal Information</h1>
     <div class="card p-4 mb-4">
         <div class="d-flex align-items-center">
             <div>
