--- a/RationShop/WebApp/templates/OrderPage.html
+++ b/RationShop/WebApp/templates/OrderPage.html
@@ -183,8 +183,13 @@
                                               style="top: -12px; left: 55px; height: 20px; min-width: 20px;">{{ x }}</span></a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="{% url 'OrderPage' %}">Request</a>
+                                    {% if request.session.Ration_Card %}
+                                    <a class="nav-link" href="{% url 'OrderPage' %}"> Orders </a>
+                                    {% elif request.session.Reg_Num %}
+                                    <a class="nav-link" href="{% url 'OrderPage' %}"> Request </a>
+                                    {% endif %}
                                 </li>
+
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'About' %}">About</a>
                                 </li>
@@ -239,9 +244,17 @@
 </header>
 
 <div class="container my-4">
+    {% if request.session.Ration_Card %}
     <a href="{% url 'Home' %}" class="back-link mb-4">
         <i class="bi bi-arrow-left"></i> Back to Home
     </a>
+    {% elif request.session.Reg_Num %}
+    <a href="{% url 'ShopHome' %}" class="back-link mb-4">
+        <i class="bi bi-arrow-left"></i> Back to Home
+    </a>
+    {% else %}
+    <a></a>
+    {% endif %}
 
     {% for order in orders %}
     <div class="order-card p-4 mb-4">
@@ -263,7 +276,8 @@
                     <p class="mb-1 fw-bold">Name : {{ order.Name }}</p>
                     <p class="mb-1">Email : {{ order.Email }}</p>
                     <p class="mb-0">Mobile : {{ order.Mobile }}</p>
-                    <p class="mb-0">Shop ID : {{ order.Shop_ID }}</p>
+                    <p class="mb-0">Shop ID : {{ order.Shop }}</p>
+
                 </div>
             </div>
 
@@ -375,8 +389,9 @@
     <p>No orders placed yet.</p>
     {% endfor %}
 
+</div>
 
-    <footer id="contact" class="bd-footer py-4 py-md-5 mt-5">
+<footer id="contact" class="bd-footer py-4 py-md-5 mt-5">
         <div class="footer">
 
             <div class="container" style="color:white;">
@@ -399,67 +414,50 @@
                     </div>
                     <div class="col-6 col-lg-2 offset-lg-1 mb-4">
                         <h4 style="color:white;" class="mb-4 border-bottom">Important Links</h4>
+                        {% if request.session.Reg_Num %}
                         <ul class="mb-4">
-                            <li class="mb-2"><a href="{% url 'Home' %}" style="color:white;">Home</a></li>
-                            <li class="mb-2"><a style="color:white;" href="{% url 'Products' %}">Assigned Rations</a>
-                            </li>
+                            <li class="mb-2"><a href="{% url 'ShopHome' %}" style="color:white;">Home</a></li>
+                            <li class="mb-2"><a style="color:white;" href="{% url 'ShopStock' %}">Products</a></li>
                             <li class="mb-2"><a style="color:white;" href="{% url 'About' %}">About Us</a></li>
                             <li class="mb-2"><a style="color:white;" href="{% url 'ContactUs' %}">Contact Us</a>
                             </li>
-                            <li class="mb-2"><a style="color:white;" href="https://themes.getbootstrap.com/">Cart</a>
-                            </li>
-                            <li class="mb-2"><a style="color:white;" href="https://blog.getbootstrap.com/">Your
-                                Orders</a>
+                            <li class="mb-2"><a style="color:white;" href="{% url 'CartPage' %}">Cart</a></li>
+                            <li class="mb-2"><a style="color:white;" href="{% url 'OrderPage' %}">Your Orders</a>
                             </li>
 
                         </ul>
+                        {% elif request.session.Ration_Card %}
+                        <ul class="mb-4">
+                            <li class="mb-2"><a href="{% url 'Home' %}" style="color:white;">Home</a></li>
+                            <li class="mb-2"><a style="color:white;" href="{% url 'Products' %}">Products</a></li>
+                            <li class="mb-2"><a style="color:white;" href="{% url 'About' %}">About Us</a></li>
+                            <li class="mb-2"><a style="color:white;" href="{% url 'ContactUs' %}">Contact Us</a>
+                            </li>
+                            <li class="mb-2"><a style="color:white;" href="{% url 'CartPage' %}">Cart</a></li>
+                            <li class="mb-2"><a style="color:white;" href="{% url 'OrderPage' %}">Your Orders</a>
+                            </li>
+
+                        </ul>
+                        {% elif request.session.delivery_partner %}
+                        <ul class="mb-4">
+                            <li class="mb-2"><a href="{% url 'Delivery_Partner' %}" style="color:white;">Home</a></li>
+
+                            <li class="mb-2"><a style="color:white;" href="{% url 'About' %}">About Us</a></li>
+                            <li class="mb-2"><a style="color:white;" href="{% url 'ContactUs' %}">Contact Us</a>
+                        </ul>
+                        {% else %}
+                        <ul></ul>
+                        {% endif %}
                     </div>
                     <div class="col-6 col-lg-2 mb-3">
                         <h4 style="color:white;" class="border-bottom mb-4">For Admins</h4>
-
                         <ul class="list-unstyled">
                             <li class="mb-2"><a style="color:white;" href="{% url 'AdminLoginPage' %}">Go To Admin
                                 DashBoard</a></li>
 
-                            <li class="mb-2"><a href="/docs/5.3/examples/starter-template/">Starter template</a>
-                            </li>
-                            <li class="mb-2"><a href="/docs/5.3/getting-started/webpack/">Webpack</a></li>
-                            <li class="mb-2"><a href="/docs/5.3/getting-started/parcel/">Parcel</a></li>
-                            <li class="mb-2"><a href="/docs/5.3/getting-started/vite/">Vite</a></li>
                         </ul>
                     </div>
-                    <div class="col-6 col-lg-2 mb-3">
-                        <h5>Projects</h5>
-                        <ul class="list-unstyled">
-                            <li class="mb-2"><a href="https://github.com/twbs/bootstrap" target="_blank"
-                                                rel="noopener">Bootstrap 5</a></li>
-                            <li class="mb-2"><a href="https://github.com/twbs/bootstrap/tree/v4-dev" target="_blank"
-                                                rel="noopener">Bootstrap 4</a></li>
-                            <li class="mb-2"><a href="https://github.com/twbs/icons" target="_blank"
-                                                rel="noopener">Icons</a>
-                            </li>
-                            <li class="mb-2"><a href="https://github.com/twbs/rfs" target="_blank"
-                                                rel="noopener">RFS</a>
-                            </li>
-                            <li class="mb-2"><a href="https://github.com/twbs/examples/" target="_blank"
-                                                rel="noopener">Examples repo</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-6 col-lg-2 mb-3">
-                        <h5>Community</h5>
-                        <ul class="list-unstyled">
-                            <li class="mb-2"><a href="https://github.com/twbs/bootstrap/issues" target="_blank"
-                                                rel="noopener">Issues</a></li>
-                            <li class="mb-2"><a href="https://github.com/twbs/bootstrap/discussions" target="_blank"
-                                                rel="noopener">Discussions</a></li>
-                            <li class="mb-2"><a href="https://github.com/sponsors/twbs" target="_blank"
-                                                rel="noopener">Corporate sponsors</a></li>
-                            <li class="mb-2"><a href="https://opencollective.com/bootstrap" target="_blank"
-                                                rel="noopener">Open Collective</a></li>
-                            <li class="mb-2"><a href="https://stackoverflow.com/questions/tagged/bootstrap-5"
-                                                target="_blank" rel="noopener">Stack Overflow</a></li>
-                        </ul>
-                    </div>
+
                 </div>
 
             </div>
@@ -480,6 +478,22 @@
     <script src="{% static 'web/assets/js/jquery.min.js' %}"></script>
     <script src="{% static 'web/assets/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'web/assets/js/jquery-3.0.0.min.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+{% if messages %}
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+    {% for message in messages %}
+        Swal.fire({
+            title: '{{ message.tags|title }}',
+            text: '{{ message }}',
+            icon: '{{ message.tags }}',
+            confirmButtonText: 'OK',
+            backdrop: true
+        });
+    {% endfor %}
+     });
+</script>
+{% endif %}
     <script src="{% static 'web/assets/js/plugin.js' %}"></script>
     <script src="{% static 'web/assets/js/jquery.mCustomScrollbar.concat.min.js' %}"></script>
     <script src="{% static 'web/assets/js/custom.js' %}"></script>
